Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-19755

Crash on CMake project load

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • Qt Creator 4.6.0-rc1
    • Qt Creator 4.6.0-beta1
    • Ubuntu 16.04.3 64 bit, CMake 3.8.2

      Running in VMware Workstation 14.1.1

      VM has 8 cores and 16GB of RAM

      On opening a cmake based project qtcreator crashes. Output on the commandline:

      SOFT ASSERT: "handled" in file /work/build/qt-creator/src/plugins/projectexplorer/buildsteplist.cpp, line 133
      SOFT ASSERT: "handled" in file /work/build/qt-creator/src/plugins/projectexplorer/buildsteplist.cpp, line 133
      SOFT ASSERT: "handled" in file /work/build/qt-creator/src/plugins/projectexplorer/buildsteplist.cpp, line 133
      SOFT ASSERT: "handled" in file /work/build/qt-creator/src/plugins/projectexplorer/buildsteplist.cpp, line 133
      SOFT ASSERT: "handled" in file /work/build/qt-creator/src/plugins/projectexplorer/buildsteplist.cpp, line 133
      SOFT ASSERT: "handled" in file /work/build/qt-creator/src/plugins/projectexplorer/buildsteplist.cpp, line 133
      SOFT ASSERT: "handled" in file /work/build/qt-creator/src/plugins/projectexplorer/buildsteplist.cpp, line 133
      SOFT ASSERT: "handled" in file /work/build/qt-creator/src/plugins/projectexplorer/buildsteplist.cpp, line 133
      SOFT ASSERT: "handled" in file /work/build/qt-creator/src/plugins/projectexplorer/buildsteplist.cpp, line 133
      SOFT ASSERT: "handled" in file /work/build/qt-creator/src/plugins/projectexplorer/buildsteplist.cpp, line 133
      SOFT ASSERT: "handled" in file /work/build/qt-creator/src/plugins/projectexplorer/buildsteplist.cpp, line 133
      SOFT ASSERT: "handled" in file /work/build/qt-creator/src/plugins/projectexplorer/buildsteplist.cpp, line 133
      SOFT ASSERT: "handled" in file /work/build/qt-creator/src/plugins/projectexplorer/buildsteplist.cpp, line 133
      SOFT ASSERT: "handled" in file /work/build/qt-creator/src/plugins/projectexplorer/buildsteplist.cpp, line 133
      SOFT ASSERT: "handled" in file /work/build/qt-creator/src/plugins/projectexplorer/buildsteplist.cpp, line 133
      SOFT ASSERT: "handled" in file /work/build/qt-creator/src/plugins/projectexplorer/buildsteplist.cpp, line 133
      SOFT ASSERT: "handled" in file /work/build/qt-creator/src/plugins/projectexplorer/buildsteplist.cpp, line 133
      SOFT ASSERT: "handled" in file /work/build/qt-creator/src/plugins/projectexplorer/buildsteplist.cpp, line 133
      SOFT ASSERT: "handled" in file /work/build/qt-creator/src/plugins/projectexplorer/buildsteplist.cpp, line 133
      ConnectionServer error: "QLocalSocket: Remote closed" "/tmp/QtCreator-CXbwpp/ClangBackEnd-4331"
      [1]    4331 segmentation fault (core dumped)  ./qtcreator.sh
      

      Core file attached.

      The same project worked fine with qtcreator 4.5.0.

        1. backtrace.txt
          7 kB
          Sebastian Schlingmann
        2. core.tar.xz
          6.25 MB
          Sebastian Schlingmann
        For Gerrit Dashboard: QTCREATORBUG-19755
        # Subject Branch Project Status CR V

            hunger Tobias Hunger
            sebastian_s Sebastian Schlingmann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes