src/plugins/ios/iosrunfactories.cpp
@@ -62,7 +62,8 @@ bool IosRunConfigurationFactory::canCreateHelper(Target *parent, const QString &
 QList<BuildTargetInfo>
     IosRunConfigurationFactory::availableBuildTargets(Target *parent, CreationMode mode) const
 {
-    auto project = static_cast<QmakeProject *>(parent->project());
+    auto project = qobject_cast<QmakeProject *>(parent->project());
+    QTC_ASSERT(project, return {});
     return project->buildTargets(mode, {ProjectType::ApplicationTemplate,
                                         ProjectType::SharedLibraryTemplate,
                                         ProjectType::AuxTemplate});
